--- a/iqas.html
+++ b/iqas.html
@@ -67,7 +67,7 @@
             <div class="col-md-12">
                 <h2 class="text-center mb-4">IQAS Dashboard</h2>
                 <img src="accreditation_standards.png" class="img-fluid mb-4 project-image" alt="IQAS Dashboard">
-                <p class="lead">The IQAS Dashboard project is a comprehensive web application designed to streamline the management and visualization of student academic performance data, integrating real-time analytics and user-friendly interfaces.</p>
+                <p>The IQAS Dashboard project is a comprehensive web application designed to streamline the management and visualization of student academic performance data, integrating real-time analytics and user-friendly interfaces.</p>
                 <p>It enhances decision-making for educators and administrators by providing intuitive dashboards that highlight key metrics and trends. The system offers features like performance tracking, trend analysis, and detailed reporting to improve the academic management process.</p>
                 <p><strong>Technologies Used:</strong> React, Node.js, MongoDB, Bootstrap</p>
             </div>
