--- a/quba.html
+++ b/quba.html
@@ -67,7 +67,7 @@
         <div class="col-md-12">
           <h2 class="text-center mb-4">Cuba Game</h2>
           <img src="cuba.png" class="img-fluid mb-4 project-image" alt="Cuba Game">
-          <p class="lead">Cuba is an exciting 3D game where the player controls a cube moving forward. The objective is to avoid obstacles by moving left or right to reach the goal. If the cube hits an obstacle, the game resets to the start.</p>
+          <p>Cuba is an exciting 3D game where the player controls a cube moving forward. The objective is to avoid obstacles by moving left or right to reach the goal. If the cube hits an obstacle, the game resets to the start.</p>
           <p>The game leverages Unity for 3D modeling and C# scripting to provide an engaging experience, with smooth controls and challenging gameplay. It is designed to test player reflexes and strategic thinking as they navigate through increasingly difficult levels.</p>
           <p><strong>Technologies Used:</strong> Unity, C#, 3D Modeling</p>
           <a href="https://youtu.be/ZvDJIbTyPLQ?si=5R775HdCAB5PYhES" target="_blank" style="text-decoration: none; color: rgb(59, 59, 59);">Click here to : <strong>View Project</strong></a>
