--- a/SmartHostel.html
+++ b/SmartHostel.html
@@ -57,7 +57,7 @@
             <div class="col-md-12">
                 <h2 class="text-center mb-4">Smart Hostel Management System</h2>
                 <img src="hostel.png" class="img-fluid mb-4" alt="Smart Hostel Management System">
-                <p class="lead">Developed a management system as part of a 4-member team using Angular. The Smart Hostel Management System is an innovative application designed to streamline hostel operations.</p>
+                <p>Developed a management system as part of a 4-member team using Angular. The Smart Hostel Management System is an innovative application designed to streamline hostel operations.</p>
                 <p>This project integrates features such as real-time occupancy tracking, maintenance requests, and communication channels, making it more efficient and convenient for hostel residents and management alike. The system's user-friendly interface ensures that both the students and hostel administration can easily manage tasks.</p>
                 <p><strong>Technologies Used:</strong> Angular, TypeScript, Bootstrap, graphQL</p>
             </div>
