--- a/vr_shopping.html
+++ b/vr_shopping.html
@@ -76,7 +76,7 @@
                 <div class="col-md-12">
                     <h2 class="text-center mb-4">VR Shopping</h2>
                     <img src="VR shopping.png" class="img-fluid mb-4 project-image" alt="VR Shopping">
-                    <p class="lead">The VR Shopping project is an immersive virtual reality application that allows
+                    <p>The VR Shopping project is an immersive virtual reality application that allows
                         users to explore and shop in a fully interactive 3D environment, simulating a realistic retail
                         experience.</p>
                     <p>It leverages cutting-edge technology to enhance user engagement and streamline the online
