--- a/SmartHostel.html
+++ b/SmartHostel.html
@@ -50,20 +50,28 @@
     </div>
   </section>
 
-  <!-- Project Detail Section -->
-  <section id="project-detail" class="py-5 content">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="text-center mb-4">Smart Hostel Management System</h2>
-                <img src="hostel.png" class="img-fluid mb-4" alt="Smart Hostel Management System">
-                <p>Developed a management system as part of a 4-member team using Angular. The Smart Hostel Management System is an innovative application designed to streamline hostel operations.</p>
-                <p>This project integrates features such as real-time occupancy tracking, maintenance requests, and communication channels, making it more efficient and convenient for hostel residents and management alike. The system's user-friendly interface ensures that both the students and hostel administration can easily manage tasks.</p>
-                <p><strong>Technologies Used:</strong> Angular, TypeScript, Bootstrap, graphQL</p>
-            </div>
-        </div>
-    </div>
-  </section>
+<!-- Project Detail Section -->
+<section id="project-detail" class="py-5 content">
+  <div class="container">
+      <div class="row">
+          <div class="col-md-12">
+              <h2 class="text-center mb-4">Smart Hostel Management System</h2>
+              <img src="hostel.png" class="img-fluid mb-4" alt="Smart Hostel Management System">
+              <p>Developed a management system as part of a 4-member team using Angular. The Smart Hostel Management System is an innovative application designed to streamline hostel operations.</p>
+              <p>This project integrates features such as real-time occupancy tracking, maintenance requests, and communication channels, making it more efficient and convenient for hostel residents and management alike. The system's user-friendly interface ensures that both the students and hostel administration can easily manage tasks.</p>
+              <p><strong>Technologies Used:</strong> Angular, TypeScript, Bootstrap, GraphQL</p>
+              <h4 class="mt-4">Key Contributions:</h4>
+              <ul>
+                  <li>Developed the front-end interface with Angular, focusing on responsive design and user experience.</li>
+                  <li>Implemented complex front-end logic to enable seamless interaction between the UI and backend systems.</li>
+                  <li>Designed and managed efficient API integrations using GraphQL for real-time data fetching and updates.</li>
+                  <li>Built robust data connections between the front-end and backend to ensure the accurate and secure transfer of information.</li>
+                  <li>Collaborated closely with team members to align on project goals and deliverables, ensuring on-time completion.</li>
+              </ul>
+          </div>
+      </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-2">
