--- a/index.html
+++ b/index.html
@@ -246,8 +246,7 @@
                     <div class="card shadow-lg h-100">
                         <div class="card-body">
                             <h5 class="card-title">B.Sc in Information Technology</h5>
-                            <p class="card-text">Dr. N.G.P. Arts and Science College (2019 - 2022)<br>
-                                GPA: 6.5</p>
+                            <p class="card-text">Dr. N.G.P. Arts and Science College (2019 - 2022)</p>
                         </div>
                     </div>
                 </div>
